cka-nginx-ingress/assets/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: test-ing
spec: {}
status: {}
