cka-nginx-ingress/assets/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:    app: test-ingress
  name: test-ingress
  namespace: test-ing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-ingress
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-ingress
    spec:
      volumes:
        - name: my-vol
          emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
           - name: my-vol
             mountPath: /usr/share/nginx/html
        resources: {}
status: {}
