cka-nginx-ingress/assets/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: test-ingress
  name: test
  namespace: test-ing
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test-ingress
status:
  loadBalancer: {}
